--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -14,8 +14,8 @@ Download:
       <th>Id</th>
       <th>Product Name</th>
       <th>Reporting Name</th>
-      <th>Created</th>
-      <th>Updated</th>
+      <%# <th>Created</th> %>
+      <%# <th>Updated</th> %>
       <th colspan="9"></th>
     </tr>
   </thead>
@@ -25,8 +25,8 @@ Download:
         <td><%= product.id %></td>
         <td><%= product.product_name %></td>
         <td><%= product.reporting_name %></td>
-        <td><%= product.created_at %></td>
-        <td><%= product.updated_at %></td>
+        <%# <td><%= product.created_at %1></td> %>
+        <%# <td><%= product.updated_at %1></td> %>
       </tr>
     <% end %>
   <tbody>
