--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -15,7 +15,7 @@ Download:
       <th>Product Name</th>
       <th>Reporting Name</th>
       <%# <th>Created</th> %>
-      <%# <th>Updated</th> %>
+      <th>Last Updated</th>
       <th colspan="9"></th>
     </tr>
   </thead>
@@ -27,8 +27,8 @@ Download:
         <td><%= product.reporting_name %></td>
         <%# <td><%= product.created_at %1></td> %>
         <%# <td><%= product.updated_at %1></td> %>
-      </tr>
-    <% end %>
+        <td><%= product.updated_at.in_time_zone("America/Los_Angeles") %></td>
+      </tr> <% end %>
   <tbody>
 </table>
 
