--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "Data Team User-Maintained Tables", root_path, id: "logo" %>
+    <%= link_to "Cross-Reference Reporting Tables", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to "Home", root_path %></li>
-        <%# <li><%= link_to "Users", '#' %1></li> %>
+        <li><%= link_to "Signup", signup_path %></li>
       </ul>
     </nav>
   </div>
