--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -35,6 +35,6 @@ Download:
 <h2>Import Products</h2>
 
 <%= form_tag import_products_path, multipart: true do %>
-  <%= file_field_tag :file %>
-  <%= submit_tag "Import" %>
+  <%= file_field_tag :file, class: "btn btn-secondary btn-lg " %>
+  <%= submit_tag "Import", class: "btn btn-primary col-sm-1 " %>
 <% end %>
