--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,8 +2,9 @@
 
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-  <%= form_for @user do |f| %>
+  <%= form_for(@user, url: signup_path) do |f| %>
     <%= render 'shared/error_messages' %>
+
     <%= f.label :name %>
     <%= f.text_field :name, class: 'form-control' %>
 
@@ -16,7 +17,7 @@
     <%= f.label :password_confirmation, "Confirmation" %>
     <%= f.password_field :password_confirmation, class: 'form-control' %>
 
-    <%= f.submit "Create my account", class: "btn btn-primary" %>
+    <%= f.submit "Create my account", class: "btn btn-primary btn-lg" %>
   <% end %>
   </div>
 </div>
