--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,18 @@
 <div class="center jumbotron">
-  <h1>Cross-Reference Reporting Tables</h1>
-
-  <h2>
-    This is the home page for the Data team's cross-reference reporting tables
-  </h2>
-
-  <%= link_to "Product Names", products_path, class: "btn btn-link btn-lg" %>
+  <h1>Welcome to IMP Store</h1>
 </div>
 
+<h1>Products</h1>
+<div class="products">
+<div class="product-images">
+  <%= image_tag "rubber_band_pack.jpg", style: "height:15%; width:15%;margin-inline:5%;"%>
+  <%= image_tag "slim_kits.jpg", style: "height:15%; width:15%;margin-inline:5%;"%>
+  <%= image_tag "craft_kits.jpg", style: "height:15%; width:15%;margin-inline:5%;"%>
+</div>
+
+<div class="product-descriptions">
+  <span>rubber band pack price: $3.50</span>
+  <span>slim kits price: $6.50</span>
+  <span>craft kits price: $6.50</span>
+</div>
+</div>
