--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,9 +5,28 @@
     <%# <%= link_to "IMP Store", root_path, id: "logo" %1> %>
       <input id="search-bar" type="text" placeholder="Search..." />
       <ul class="nav navbar-nav navbar-right">
+        <% if logged_in? %>
         <li><%= link_to "Home", root_path, class: "text-white" %></li>
         <li><%= link_to "About Us", about_path, class: "text-white" %></li>
-        <li><%= link_to "Signup", signup_path, class: "text-white" %></li>
+          <li><%= link_to "Users", user_path(current_user) %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Account <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Profile", current_user %></li>
+              <li><%= link_to "Settings", edit_user_path(current_user) %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "Log out", logout_path, method: "delete" %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+        <li><%= link_to "Home", root_path, class: "text-white" %></li>
+        <li><%= link_to "About Us", about_path, class: "text-white" %></li>
+        <li><%= link_to "Log in", login_path %></li>
+        <% end %>
       </ul>
     </nav>
   </div>
