--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,30 +1,25 @@
-<div class="center jumbotron">
-  <h1>Welcome to IMP Store</h1>
-</div>
-<h1>Products</h1>
-<div class="products">
-  <div class="product-images">
-    <a id="link" href="#" onclick="showModal()">link</a>
-    <%= link_to image_tag "rubber_band_pack.jpg", class: "product-image", style: "height:15%; width:15%;margin-inline:5%;"%> 
-    <%= link_to image_tag "slim_kits.jpg", class: "product-image", style: "height:15%; width:15%;margin-inline:5%;"%> 
-    <%= link_to image_tag "craft_kits.jpg", class: "product-image", style: "height:15%; width:15%;margin-inline:5%;"%> 
-    <%= link_to image_tag "sticker-pack.jpg", class: "product-image", style: "height:15%; width:15%;margin-inline:5%;"%> 
-    <%= link_to image_tag "tissue-pack.jpg", class: "product-image", style: "height:15%; width:15%;margin-inline:5%;"%> 
+<div data-turbolinks="false">
+
+  <div class="center jumbotron">
+    <h1>Welcome to IMP Store</h1>
   </div>
 
-  <div class="product-descriptions">
-    <span>rubber band pack price: $3.50</span>
-    <%# <span>slim kits price: $6.50</span> %> <%#
-    <span>craft kits price: $6.50</span> %>
-  </div>
+  <h1>Products</h1>
 
-  <!-- The Modal -->
-  <div id="product-modal" class="modal">
-    <!-- Modal content -->
-    <div class="modal-content">
-      <span class="close" onclick="removeModal()">&times;</span>
-      <p>rubber band pack price: $3.50</p>
+  <div class="products">
+    <div class="product-images">
+      <% @products.each do |product| %>
+          <a href="#" onclick='showModal(<%="#{product.to_json}"%>)'><%= image_tag "#{product[:image]}", width: "15%", height: "15%"%></a>
+      <% end %>
+        </div>
+
+    <div id="product-modal" class="modal">
+      <div class="modal-content">
+        <span class="close" onclick="removeModal()">&times;</span>
+        <p class="product-description">product description placeholder</p>
+      </div>
     </div>
+    <%= javascript_include_tag "productModal.js" %>
   </div>
-<%= javascript_include_tag "productModal.js" %>
+
 </div>
