--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -175,3 +175,39 @@ input {
   text-decoration: none;
   cursor: pointer;
 }
+
+.gallery .item {
+  margin: 5px;
+  border: 1px solid #ccc;
+  // float: left;
+  width: 180px;
+}
+
+.gallery:hover {
+  border: 1px solid #777;
+}
+
+.gallery img {
+  width: 100%;
+  height: auto;
+}
+
+.desc {
+  padding: 15px;
+  text-align: center;
+}
+.gallery {
+  display: flex;
+}
+
+.choose-giveaway-btn {
+  // display: block;
+  width: 40%;
+  // border: none;
+  background-color: #4CAF50;
+  padding: 10px 20px;
+  // font-size: 16px;
+  // cursor: pointer;
+  // text-align: center;
+  color: white;
+}
